[package]
name = "rq"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
console-subscriber = "0.4.1"
crossterm = { version = "0.28.1", features = ["event-stream", "libc", "use-dev-tty"] }
derive_more = { version = "1.0.0", features = ["from"] }
futures = "0.3.31"
num = "0.4.3"
ratatui = "0.29.0"
shlex = "1.3.0"
tempfile = "3.13.0"
tokio = { version = "1.41.0", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
tui-textarea = "0.7.0"
tui-widgets = "0.4.0"
unicode-segmentation = "1.12.0"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
struct_field_names = "allow"
unit_arg = "allow"
